test_cases/negative/rescurive_import_2.snek
import "./rescurive_import_1.snek" as lib;
